Refactoring - part way to removing explicit event types