@@ -4,7 +4,6 @@ import java.time.LocalDate;
 import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class TemporalCollection<T> {
     Map<LocalDate, T> entries = new LinkedHashMap<>();
@@ -14,7 +13,7 @@ public class TemporalCollection<T> {
     }
 
     public T get(LocalDate when) {
-        for (LocalDate d : entries.keySet().stream().sorted(Comparator.reverseOrder()).collect(Collectors.toList())) {
+        for (LocalDate d : entries.keySet().stream().sorted(Comparator.reverseOrder()).toList()) {
             if (when.isEqual(d) || when.isAfter(d)) {
                 return entries.get(d);
             }
